adding responsive features

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     <title>Document</title>
 </head>
 <body>
-  
+  <h1 class="hidden">Respnsive Site Design</h1>
+  <div id="container">
+      <section class="box box1">
+        <h1>Box 1</h1>
+      </section>
+      <section class="box box2">
+        <h1>Box 2</h1>
+      </section>
+      <section class=" box box3">
+        <h1>Box 3</h1>
+      </section>
+      <section class=" box box4">
+        <h1>Box 4</h1>
+      </section>
+  </div>
     
     <script src="script/main.js"></script>
 </body>
